Bug 345825 getTextAtOffset doesn't work correctly r=aaronleventhal